DTR-174: Hint text wording change

--- a/app/views/TotalAmountDueView.scala.html
+++ b/app/views/TotalAmountDueView.scala.html
@@ -41,7 +41,12 @@
             )
             .withPrefix(PrefixOrSuffix(content = "£"))
             .withWidth(Fixed10)
-            .withHint(HintViewModel(HtmlContent(messages("totalAmountDue.hint"))))
+            .withHint(HintViewModel(HtmlContent(Seq
+                (
+                    s"<p class='govuk-body'>${messages("totalAmountDue.p1")}</p>",
+                    messages("totalAmountDue.hint")
+                ).mkString
+            )))
         )
 
         @govukButton(
