--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,28 +37,12 @@
   border-bottom: 1px solid #bfc1c3;
 }
 
-.extra-line-spacing {
-  line-height: 1.4;
-  margin-top: -17px;
-  margin-bottom: 2em;
-}
-
-.direct-debit-container {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-
-.direct-debit-text {
-  flex: 1;
-}
-
-.direct-debit-logo img {
-  max-height: 60px;
+.direct-debit-logo {
+  max-width:256px;
+  max-height: 83px;
   height: auto;
   width: auto;
+  margin-bottom: 0.625rem;
 }
 
 .inline-logo {
