--- a/app/views/PaymentPlanDetailsView.scala.html
+++ b/app/views/PaymentPlanDetailsView.scala.html
@@ -52,7 +52,7 @@
                             visuallyHiddenText = Some(messages("Amend"))
                         ) else null,
                         if (showActions && planType != PaymentPlanType.TaxCreditRepaymentPlan.toString) ActionItem(
-                            href = "#",
+                            href = routes.CancelPaymentPlanController.onPageLoad(NormalMode).url,
                             content = messages("paymentPlanDetails.details.cancel"),
                             visuallyHiddenText = Some(messages("Cancel"))
                         ) else null,
