--- a/app/views/CancelPaymentPlanView.scala.html
+++ b/app/views/CancelPaymentPlanView.scala.html
@@ -15,6 +15,7 @@
  *@
 
 @import viewmodels.LegendSize._
+@import utils.MaskAndFormatUtils.*
 
 @this(
     layout: templates.Layout,
@@ -24,7 +25,7 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode, planType: String)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, planType: String, paymentPlanReference: String, paymentAmount: BigDecimal)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("cancelPaymentPlan.title")), backLink = Some(routes.PaymentPlanDetailsController.onPageLoad().url)) {
 
@@ -37,11 +38,11 @@
         <h1 class="govuk-heading-xl">@messages("cancelPaymentPlan.heading")</h1>
 
         <p class="govuk-body">
-            @messages("cancelPaymentPlan.paymentReference") <br/>
+            @messages("cancelPaymentPlan.paymentReference") <strong>@paymentPlanReference</strong><br/>
             @if(planType == PaymentPlanType.SinglePaymentPlan.toString) {
-                @messages("cancelPaymentPlan.paymentAmount.single")<br/>
+                @messages("cancelPaymentPlan.paymentAmount.single") <strong>@formatAmount(paymentAmount)</strong><br/>
             } else {
-                @messages("cancelPaymentPlan.paymentAmount.budget")<br/>
+                @messages("cancelPaymentPlan.paymentAmount.budget") <strong>@formatAmount(paymentAmount)</strong><br/>
             }
         </p>
 
