--- a/app/views/CancelPaymentPlanView.scala.html
+++ b/app/views/CancelPaymentPlanView.scala.html
@@ -25,11 +25,11 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode, planType: String, paymentPlanReference: String, paymentAmount: BigDecimal)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], planType: String, paymentPlanReference: String, paymentAmount: BigDecimal)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("cancelPaymentPlan.title")), backLink = Some(routes.PaymentPlanDetailsController.onPageLoad().url)) {
 
-    @formHelper(action = routes.CancelPaymentPlanController.onSubmit(mode), Symbol("autoComplete") -> "off") {
+    @formHelper(action = routes.CancelPaymentPlanController.onSubmit(), Symbol("autoComplete") -> "off") {
 
         @if(form.errors.nonEmpty) {
             @govukErrorSummary(ErrorSummaryViewModel(form))
