--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -31,7 +31,7 @@
 
 @(directDebitReference: String, directDebitDetails: NddDDPaymentPlansResponse)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = titleNoForm(messages("directDebitPaymentSummary.title")), backLink = Some(routes.YourDirectDebitInstructionsController.onPageLoad().url)) {
+@layout(pageTitle = titleForSetupJourneyNoForm(messages("directDebitPaymentSummary.title")), backLink = Some(routes.YourDirectDebitInstructionsController.onPageLoad().url)) {
 
     @header1("directDebitPaymentSummary.heading")
     @paragraph("directDebitPaymentSummary.p1")
