--- a/app/views/IndexView.scala.html
+++ b/app/views/IndexView.scala.html
@@ -23,7 +23,7 @@
 @()(implicit request: Request[_], messages: Messages)
 
 @layout(
-    pageTitle    = titleNoForm(messages("index.title")),
+    pageTitle    = titleForSetupJourneyNoForm(messages("index.title")),
     showBackLink = false
 ) {
     <h1 class="govuk-heading-xl">@messages("index.heading")</h1>
