--- a/app/views/PaymentAmountView.scala.html
+++ b/app/views/PaymentAmountView.scala.html
@@ -26,7 +26,7 @@
 
 @(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("paymentAmount.title")), backLink = Some(call.url)) {
+@layout(pageTitle = titleForSetupJourney(form, messages("paymentAmount.title")), backLink = Some(call.url)) {
 
     @formHelper(action = routes.PaymentAmountController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
