DTR-162: UCD Review Changes: SCREEN - T14 - Plan Start Date (#139)
* DTR-162: Hint text wording change, some hint text moved to expansion field

* DTR-162: refactor displaying dynamic collapasable content logic

* DTR-162: update detail summaryText to match confluence

* DTR-162: add logic and UT on restrict page view based on directDebitSource

* DTR-162: remove unused code

* DTR-162: refactor: replace string comparison with direct case object type check and reorder logic

* DTR-162: refactor rename variable name

--- a/app/views/PlanStartDateView.scala.html
+++ b/app/views/PlanStartDateView.scala.html
@@ -14,15 +14,20 @@
  * limitations under the License.
  *@
 
+@import views.html.components.*
+@import models.DirectDebitSource.*
+
 @this(
     layout: templates.Layout,
     formHelper: FormWithCSRF,
     mainErrorSummary: components.MainErrorSummary,
     govukDateInput: GovukDateInput,
-    govukButton: GovukButton
+    govukButton: GovukButton,
+    govukDetails: GovukDetails,
+    paragraph: Paragraph,
 )
 
-@(form: Form[_], mode: Mode, dateTimeShort: String, dateTimeNumeric: String, source: DirectDebitSource, call: Call)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, dateTimeNumeric: String, source: DirectDebitSource, call: Call)(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("planStartDate.title")), backLink = Some(call.url)) {
 
@@ -35,7 +40,19 @@
                 field  = form("value"),
                 legend = LegendViewModel(messages("planStartDate.heading")).asPageHeading()
             )
-            .withHint(HintViewModel(HtmlContent(messages(s"planStartDate.${source.toString}.hint", dateTimeShort) + messages("planStartDate.fixedHint", dateTimeNumeric))))
+            .withHint(HintViewModel(HtmlContent(
+                Seq(
+                    paragraph("planStartDate.p1"),
+
+                    govukDetails(
+                        Details(
+                            summary = messages("planStartDate.collapsable"),
+                            content = messages(s"planStartDate.collapsable.${source}.p1")
+                        )
+                    ),
+                    messages("planStartDate.fixedHint", dateTimeNumeric),
+                ).mkString
+            )))
         )
 
         @govukButton(
