--- a/app/views/SuspensionPeriodRangeDateView.scala.html
+++ b/app/views/SuspensionPeriodRangeDateView.scala.html
@@ -25,7 +25,7 @@
     govukButton: GovukButton
 )
 
-@(form: Form[_], mode: Mode)(implicit request: Request[_], messages: Messages)
+@(form: Form[_], mode: Mode, planReference: String, paymentAmount: String )(implicit request: Request[_], messages: Messages)
 
 @layout(pageTitle = title(form, messages("suspensionPeriodRangeDate.title"))) {
 
@@ -39,8 +39,8 @@
         @header1("suspensionPeriodRangeDate.heading")
 
         <p class="govuk-body">
-            @Html(messages("suspensionPeriodRangeDate.p1.line1", "1158497733")) <br>
-            @Html(messages("suspensionPeriodRangeDate.p1.line2", "£1,999.98"))
+            @Html(messages("suspensionPeriodRangeDate.p1.line1", planReference)) <br>
+            @Html(messages("suspensionPeriodRangeDate.p1.line2", paymentAmount))
         </p>
 
         @govukDateInput(
