--- a/app/views/SuspensionPeriodRangeDateView.scala.html
+++ b/app/views/SuspensionPeriodRangeDateView.scala.html
@@ -27,7 +27,7 @@
 
 @(form: Form[_], mode: Mode, planReference: String, paymentAmount: String )(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("suspensionPeriodRangeDate.title"))) {
+@layout(pageTitle = title(form, messages("suspensionPeriodRangeDate.title")), backLink = Some(routes.SuspendPaymentPlanController.onPageLoad().url)) {
 
     @formHelper(action = routes.SuspensionPeriodRangeDateController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
