--- a/app/views/DuplicateWarningView.scala.html
+++ b/app/views/DuplicateWarningView.scala.html
@@ -29,7 +29,7 @@ govukButton: GovukButton
 
 @(form: Form[_], mode: Mode, call: Call)(implicit request: Request[_], messages: Messages)
 
-@layout(pageTitle = title(form, messages("duplicateWarning.title")), backLink = Some(call.url)) {
+@layout(pageTitle = titleForManageJourney(form, messages("duplicateWarning.title")), backLink = Some(call.url)) {
 
 @formHelper(action = routes.DuplicateWarningController.onSubmit(mode), Symbol("autoComplete") -> "off") {
 
