--- a/app/views/DirectDebitSummaryView.scala.html
+++ b/app/views/DirectDebitSummaryView.scala.html
@@ -97,7 +97,7 @@
 
     <h1 class="govuk-heading-m">@messages("directDebitPaymentSummary.setupPayment.h1")</h1>
 
-    <p class="govuk-inset-text">@messages("directDebitPaymentSummary.setupPayment.p1")</p>
+    @paragraph("directDebitPaymentSummary.setupPayment.p1")
 
     @govukButton(
         ButtonViewModel(messages("directDebitPaymentSummary.addPaymentButton"))
