DTR-165: refactor bold to view paragraph components not on messages with <strong>

--- a/app/views/YearEndAndMonthView.scala.html
+++ b/app/views/YearEndAndMonthView.scala.html
@@ -60,7 +60,7 @@
 
     @defining(HtmlFormat.fill(Seq(
 
-        paragraph("yearEndAndMonth.collapsable.examples.p1"),
+        paragraph("yearEndAndMonth.collapsable.examples.p1", true),
         bulletList(
         items = Seq(
             "yearEndAndMonth.collapsable.examples.b1",
@@ -68,7 +68,7 @@
             "yearEndAndMonth.collapsable.examples.b3"
         )
         ),
-        paragraph("yearEndAndMonth.collapsable.monthCodes.p1"),
+        paragraph("yearEndAndMonth.collapsable.monthCodes.p1", true),
         paragraph("yearEndAndMonth.collapsable.monthCodes.p2"),
         paragraph("yearEndAndMonth.collapsable.quarterCodes.p1"),
 
